<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayerActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_weight="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back"
            android:background="@android:color/transparent"
            android:layout_marginStart="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="20dp"
            android:gravity="center"
            android:text= "World of Music"
            android:layout_weight="1"/>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/favourite_empty"
            android:background="@android:color/transparent"
            android:layout_marginEnd="10dp"
            />


  </LinearLayout>
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/songImgPA"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_margin="10dp"
        app:shapeAppearanceOverlay="@style/curved"
        app:strokeColor="@color/cool_blue"
        app:strokeWidth="5dp"
        />
    <TextView
        android:id="@+id/songNamePA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/song_name"
        android:textSize="18dp"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_weight="1"/>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_margin="10dp"
    android:gravity="center"
    android:layout_weight="1">
<com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:icon="@drawable/back_icon"
    app:iconSize="40dp"
    />
    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/playPauseBtnPA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:icon="@drawable/pause_icon"
        app:iconSize="50dp"
        android:layout_marginHorizontal="25dp"
        app:shapeAppearanceOverlay="@style/curved"
        android:backgroundTint="@android:color/holo_red_light"
        app:iconTint="@color/white"
        />
    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:icon="@drawable/next_icon"
        app:iconSize="40dp"
        />

</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_margin="20dp"
        android:layout_weight="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:text="@string/start_tv"
            android:layout_gravity="center"
            />

        <androidx.appcompat.widget.AppCompatSeekBar
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:text="@string/end_tv"
            android:layout_gravity="center"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/repeat_icon"
            android:background="@android:color/transparent"
            android:contentDescription="@string/repeat_btn"
            android:layout_weight="1"
            app:tint="@color/cool_pink" />
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/equalizer_icon"
            android:background="@android:color/transparent"
            android:contentDescription="@string/equalizer_btn"
            android:layout_weight="1"
            app:tint="@color/cool_pink" />
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/timer_icon"
            android:background="@android:color/transparent"
            android:contentDescription="@string/repeat_btn"
            android:layout_weight="1"
            app:tint="@color/cool_pink" />
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/share_icon"
            android:background="@android:color/transparent"
            android:contentDescription="@string/share_btn"
            android:layout_weight="1"
            app:tint="@color/cool_pink" />


    </LinearLayout>

</LinearLayout>